--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <button>light/dark</button>
   </header>
   <main>
-    <h1>Analyze your text in real-time.</h1>
-    <input type="text-area">
+    <h1>Analyze your text</h1>
+    <h1>in real-time.</h1>
+    <textarea id="text-area" placeholder="Start typing here... (or paste your text)" rows="5" cols="30"></textarea>
     <div class="undertext-container">
       <div class="text-options">
         <input type="checkbox">
@@ -25,7 +26,7 @@
         <p>Approx. reading time: <span>0</span> minute</p>
       </div>
     </div>
-    <div class="conter-container">
+    <div class="counter-container">
       <div class="counter">
         <h1>00</h1>
         <p>Total Character</p>
