Add total character functional

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="counter-container">
       <div class="counter">
-        <h1>00</h1>
+        <h1 id="total-characters">00</h1>
         <p>Total Character</p>
       </div>
       <div class="counter">
@@ -41,5 +41,6 @@
       </div>
     </div>
   </main>
+  <script src="js/script.js"></script>
 </body>
 </html>
