Add word counter function

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p>Total Character</p>
       </div>
       <div class="counter">
-        <h1>00</h1>
+        <h1 id="word-count">00</h1>
         <p>Word Count</p>
       </div>
       <div class="counter">
