Add sentence count function

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p>Word Count</p>
       </div>
       <div class="counter">
-        <h1>00</h1>
+        <h1 id="sentence-count">00</h1>
         <p>Sentence Count</p>
       </div>
     </div>
