--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <textarea id="text-area" placeholder="Start typing here... (or paste your text)" rows="5" cols="30"></textarea>
     <div class="undertext-container">
       <div class="text-options">
-        <input type="checkbox">
-        <label for="">Exclude Spaces</label>
+        <input type="checkbox" id="exclude-spaces">
+        <label for="exclude-spaces">Exclude Spaces</label>
         <input type="checkbox">
         <label for="">Set Character Limit</label>
       </div>
       <div class="readind-time">
-        <p>Approx. reading time: <span>0</span> minute</p>
+        <p>Approx. reading time: <span id="readind-time">0</span> minute</p>
       </div>
     </div>
     <div class="counter-container">
@@ -44,3 +44,5 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
+
