Add approx. reading time func

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <label for="">Set Character Limit</label>
       </div>
       <div class="readind-time">
-        <p>Approx. reading time: <span id="readind-time">0</span> minute</p>
+        <p>Approx. reading time: <span id="reading-time">0</span> minute</p>
       </div>
     </div>
     <div class="counter-container">
