--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   <header>
     <h3>Character Counter</h3>
-    <button>light/dark</button>
+    <label for="themeToggle">
+      <input type="checkbox" id="themeToggle"> Dark Mode
+    </label>
   </header>
   <main>
     <h1>Analyze your text</h1>
@@ -44,5 +46,6 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
