Add icons for theme mode toggle

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <header>
     <h3>Character Counter</h3>
     <label for="themeToggle">
-      <input type="checkbox" id="themeToggle"> Dark Mode
+      <img src="icons/dark_mode.svg" alt="" id="themeIcon">
+      <input type="checkbox" id="themeToggle" hidden>
     </label>
   </header>
   <main>
