Change theme checkbox to button

--- a/index.html
+++ b/index.html
@@ -8,22 +8,14 @@
 </head>
 <body>
   <div class="container">
-
     <header class="header">
       <h1 class="logo">Character Counter</h1>
-      <!-- <button class="theme-toggle" id="themeToogle" aria-label="Toggle dark mode">
+      <button class="theme-toggle" id="themeToogle" aria-label="Toggle dark mode">
         <div class="theme-icon">
           <img src="icons/dark_mode.svg" id="themeIcon">
         </div>
-      </button> -->
-
-      <label for="themeToggle">
-        <img src="icons/dark_mode.svg" alt="" id="themeIcon">
-        <input type="checkbox" id="themeToggle" hidden>
-      </label>
-
+      </button>
     </header>
-
     <main>
       <h1>Analyze your text</h1>
       <h1>in real-time.</h1>
