--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
         </div>
       </button>
     </header>
+
     <main>
-      <h1>Analyze your text</h1>
-      <h1>in real-time.</h1>
+      <section class="hero">
+        <h1>Analyze your text</h1>
+        <h2>in real-time.</h2>
+      </section>
+      
       <p id="limitation-warning" class="hidden">WARNING: Limit exceeded! You’ve used <span id="character-count-limit">0 out of 0</span> allowed characters. Please shorten your text.</p>
       <textarea id="text-area" placeholder="Start typing here... (or paste your text)" rows="5" cols="30"></textarea>
       <div class="undertext-container">
