Style warning area

--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
         <h1>Analyze your text</h1>
         <h2>in real-time.</h2>
       </section>
-      
+
+      <div class="warning-message" id="warningMessage" role="alert">
+        <strong>Warning!</strong> Limit exceeded! You've used <span id="characterCountLimit">0 out of 0</span> allowed characters. Please shorten your text.
+      </div>
+
       <p id="limitation-warning" class="hidden">WARNING: Limit exceeded! You’ve used <span id="character-count-limit">0 out of 0</span> allowed characters. Please shorten your text.</p>
+
+
       <textarea id="text-area" placeholder="Start typing here... (or paste your text)" rows="5" cols="30"></textarea>
       <div class="undertext-container">
         <div class="text-options">
