feat: add basic letter density func

--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
         </div>
 
       </section>
+
+      <section>
+        <h3 class="letter-density-header">Letter Density</h3>
+        <div class="letter-density-result" id="letterDensity">
+          <p>No characters found. Start typing to see letter density.</p>
+        </div>
+      </section>
     </main>
   </div>
   <script src="js/script.js"></script>
